- Fixed bug #51732, Fileinfo __construct or open does not work with NULL